# arena

./: .gitignore  ANALYSE.md  CLAUDE.md  README.md
.devcontainer/: Dockerfile  attach.sh  build.sh  devcontainer.json  start.sh
.github/: renovate.json
.github/workflows/: arena.yml
docs/: BENCH.md
docs/perf/: bottlenecks.md  java-analysis.md
languages/: versions.sh
languages/c/: bench.sh  footprint.sh  setup.sh
languages/c-cortex-m/: bench.sh  footprint.sh  setup.sh
languages/c-embedded/: .gitignore  bench.h  bench.sh  footprint.sh  meta  setup.sh
languages/c-embedded/nanopb/: bench.c
languages/c-embedded/protobuf/: bench.c
languages/c-embedded/sofab/: bench.c  cfg.yaml
languages/c-riscv/: bench.sh  footprint.sh  setup.sh
languages/c/nanopb/: bench.c  message.options
languages/c/protobuf/: bench.c
languages/c/sofab/: bench.c
languages/common/: sha256.c  sha256.h
languages/cpp/: .gitignore  bench.sh  meta  setup.sh
languages/cpp-cortex-m/: bench.sh  footprint.sh  setup.sh
languages/cpp-embedded/: .gitignore  README.md  bench.sh  footprint.sh  setup.sh
languages/cpp-embedded/embeddedproto/: bench.cpp
languages/cpp-embedded/embeddedproto/proto/: message.proto
languages/cpp-embedded/sofab/: bench.cpp  cfg.yaml
languages/cpp-riscv/: bench.sh  footprint.sh  setup.sh  toolchain.sh
languages/cpp/protobuf/: bench.cpp
languages/cpp/sofab/: bench.cpp  cfg.yaml
languages/csharp/: .gitignore  bench.sh  setup.sh
languages/csharp/protobuf/: Bench.cs  bench.csproj
languages/csharp/sofab/: cfg.yaml
languages/csharp/sofab/bench/: Bench.cs  bench.csproj
languages/dart/: .gitignore  README.md  bench.sh  setup.sh
languages/dart/common/: bench_common.dart
languages/dart/protobuf/: bench.dart  pubspec.yaml
languages/dart/sofab/: bench.dart  cfg.yaml
languages/go/: .gitignore  bench.sh  corelib-go-encoder.patch  setup.sh
languages/go/protobuf/: go.mod  main.go
languages/go/sofab/: README.md  cfg.yaml  go.mod  main.go
languages/go/sofab/harness/: main.go
languages/go/sofab/message/: example.go  types.go
languages/java/: .gitignore  bench.sh  setup.sh
languages/java/protobuf/: pom.xml
languages/java/protobuf/src/main/java/bench/: Bench.java
languages/java/sofab/: cfg.yaml
languages/python/: README.md  bench.sh  setup.sh
languages/python/protobuf/: bench.py
languages/python/sofab/: bench.py  cfg.yaml
languages/rust/: .gitignore  bench.sh  setup.sh
languages/rust-cortex-m/: bench.sh  footprint.sh  setup.sh
languages/rust-embedded/: bench.sh  footprint.sh  setup.sh
languages/rust-embedded/micropb/: Cargo.toml  build.rs  message.proto
languages/rust-embedded/micropb-ffi/: Cargo.toml
languages/rust-embedded/micropb-ffi/src/: lib.rs
languages/rust-embedded/micropb/src/: lib.rs  main.rs
languages/rust-embedded/sofab/: cfg.yaml
languages/rust-embedded/sofab-ffi/: Cargo.toml
languages/rust-embedded/sofab-ffi/src/: lib.rs
languages/rust-riscv/: bench.sh  footprint.sh  setup.sh
languages/rust/protobuf/: Cargo.toml  build.rs
languages/rust/protobuf/src/: main.rs
languages/rust/sofab/: bench.rs  cfg.yaml
languages/typescript/: .gitignore  bench.sh  setup.sh
languages/typescript-bun/: bench.sh  setup.sh
languages/typescript/protobuf/: bench.ts  package-lock.json  package.json
languages/typescript/sofab/: bench.ts  cfg.yaml
languages/zig/: .gitignore  bench.sh  setup.sh
languages/zig/protobuf/: build.zig  build.zig.zon
languages/zig/protobuf/src/: bench.zig
languages/zig/sofab/: cfg.yaml
results/: CSHARP-OPTIMIZATION.md  JAVA-OPTIMIZATION.md  RESULTS.txt
schema/: STATE.md  message.proto  message.sofab.yaml  state.json
scripts/: bootstrap.sh  run_benchmark.sh
