# Bare-metal footprint FFI wrapper for the micropb baseline: exposes the
# micropb-generated no_std codec (micropb_msgs lib with --no-default-features)
# through an extern "C" entry point, as a staticlib the rust-cortex-m /
# rust-riscv footprint targets link into the same C driver/baseline scheme the
# C targets use. Never executed — size measurement only.
[package]
name = "micropb-ffi"
version = "0.0.0"
edition = "2021"

[lib]
name = "micropb_ffi"
path = "src/lib.rs"
crate-type = ["staticlib"]

[dependencies]
micropb_msgs = { package = "rust-embedded-micropb-bench", path = "../micropb", default-features = false }
micropb = { version = "0.6", default-features = false, features = ["encode", "decode", "container-heapless-0-8", "enable-64bit"] }
heapless = { version = "0.9", default-features = false }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
