[package]
name = "rust-embedded-micropb-bench"
version = "0.0.0"
edition = "2021"

# The generated message module lives in the lib (no_std under
# --no-default-features) so the bare-metal footprint FFI wrapper can reuse the
# identical codec; the bench binary is host/std-only.
[lib]
name = "micropb_msgs"
path = "src/lib.rs"

[[bin]]
name = "bench"
path = "src/main.rs"
required-features = ["std"]

[dependencies]
# no_std, no-alloc protobuf runtime. Fixed-capacity containers come from
# heapless (v0.8). enable-64bit gives us u64/i64/double support.
micropb = { version = "0.6", default-features = false, features = ["encode", "decode", "container-heapless-0-8", "enable-64bit"] }
# micropb 0.6 wires its PbString/PbVec/PbBytes impls to heapless 0.8 (the
# container-heapless-0-8 feature above); heapless 0.9 drops those impls and the
# pb_push shim, so the generated codec fails to compile. Pin to 0.8 until
# micropb ships a container-heapless-0-9 feature.
heapless = { version = "0.8", default-features = false }
# Host-side harness only (timing/hash) — not part of the codec footprint.
# Kept in lockstep with the sofab harness (both rust-embedded impls on 0.11);
# 0.11's digest() returns a hybrid_array::Array with no LowerHex, so the bench
# formats the hash byte-wise (see src/main.rs).
sha2 = { version = "0.11", optional = true }

[features]
default = ["std"]
std = ["dep:sha2"]

[build-dependencies]
# Codegen: drives protoc + emits the no_std message module into OUT_DIR.
micropb-gen = "0.6"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
